// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionSection matches snapshot with description 1`] = `
<DocumentFragment>
  <div
    class="bg-white p-6 rounded-xl shadow-md mb-12"
    data-testid="description-section"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-4"
    >
      Descripción
    </h2>
    <p
      class="text-gray-700 whitespace-pre-line"
      data-testid="description-content"
    >
      This is a test description.
With multiple lines.
    </p>
  </div>
</DocumentFragment>
`;

exports[`DescriptionSection matches snapshot with empty description 1`] = `
<DocumentFragment>
  <div
    class="bg-white p-6 rounded-xl shadow-md mb-12"
    data-testid="description-section"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-4"
    >
      Descripción
    </h2>
    <p
      class="text-gray-700 whitespace-pre-line"
      data-testid="description-content"
    />
  </div>
</DocumentFragment>
`;
